# iDID

./: readme.md  render.yaml
backend/: .gitignore  app.py  models.py  pyproject.toml  render.yaml  requirements.txt  wsgi.py
backend/instance/: achievements.db
backend/migrations/versions/: 3b420c4c8379_initial_migration_with_user_profile.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/Auth/: Auth.css  Auth.js
frontend/src/components/Dashboard/: Dashboard.css  Dashboard.js  History.js
frontend/src/components/LandingPage/: LandingPage.js
frontend/src/components/Navbar/: Navbar.css  Navbar.js  NavbarLanding.js
frontend/src/components/Pages/: About.css  About.js  LandingPage.css  LandingPage.js  Pricing.css  Pricing.js
frontend/src/components/Private/: PrivateRoute.js
frontend/src/components/Profile/: Profile.css  Profile.js
frontend/src/components/config/: supabaseClient.js
frontend/src/components/context/: AuthContext.js
frontend/src/components/services/: api.js
