[tool.poetry]
name = "idid"
version = "0.1.0"
description = "iDID Flask Backend"
authors = ["Nigel <nigelchimwene@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-jwt-extended = "^4.5.3"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
